# BunkrDownloader

./: .env.sample  .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  downloader.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  semantic-release.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: App.jsx  App.tsx  global.css  main.jsx  main.tsx
frontend/src/components/download/: DirectoryPickerDialog.tsx  DownloadForm.tsx  OverallProgressCard.tsx  TaskList.tsx  (+1 more)
frontend/src/hooks/: useActiveJob.ts  usePersistentState.ts  useThemePreference.ts
frontend/src/lib/: api.ts  connection.ts  events.ts  store.ts  util.ts  ws-url.ts
frontend/src/styles/: progress.module.css  surface.module.css
frontend/src/theme/: ThemeProvider.tsx  globals.css  tokens.ts
smoke_tests/: test_progress.py
src/: __init__.py  bunkr_utils.py  config.py  file_utils.py  general_utils.py  url_utils.py
src/crawlers/: api_utils.py  crawler_utils.py
src/downloaders/: album_downloader.py  download_utils.py  media_downloader.py
src/managers/: live_manager.py
src/web/: __init__.py  app.py
tests/: conftest.py
tests/integration/: test_web_job_flow.py  test_web_security.py
tests/unit/: test_download_utils.py  test_event_broker.py  test_file_utils.py  test_media_downloader.py  test_memory_bounds.py  test_network_context.py  test_review_regressions.py  test_web_live_manager.py
(+8 files in other folders)
