[project]
name = "bunkrdownloader"
version = "0.3.0"
description = "Rich CLI and web dashboard for downloading from Bunkr."
readme = "README.md"
requires-python = ">=3.10"

[tool.python-semantic-release]
branch = "main"
tag_format = "v{version}"
version_variable = "src/__init__.py:_SEMANTIC_VERSION"
version_toml = "pyproject.toml:project.version"
commit_parser = "angular"
build_command = ""
upload_to_repository = false
upload_to_release = false
