[project]
name = "bunkrdownloader"
version = "0.3.3"
description = "Rich CLI and web dashboard for downloading from Bunkr."
readme = "README.md"
requires-python = ">=3.10"

[tool.python-semantic-release]
branch = "main"
tag_format = "v{version}"
version_toml = "pyproject.toml:project.version"
commit_parser = "angular"
build_command = ""
upload_to_repository = false
upload_to_release = false

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests", "smoke_tests"]
asyncio_mode = "auto"
# Abort runaway tests (e.g. a WebSocket session that never closes) rather
# than letting CI hang the whole build.
timeout = 30
